#10 Move styling to CSS file.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -21,6 +21,9 @@ pre {
 * {
 	word-break: normal;
 	}
+.net-splitcells-space-filler {
+	flex: auto;
+	}
 .net-splitcells-hidden {
 	display: none;
 	visibility: hidden;
