--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/theme.white.variables.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/theme.white.variables.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+/*
+ * Copyright (c) 2021 Mārtiņš Avots (Martins Avots) and others
+ *
+ * This program and the accompanying materials are made available under the
+ * terms of the Eclipse Public License 2.0, which is available at
+ * http://www.eclipse.org/legal/epl-2.0, or the MIT License,
+ * which is available at https://spdx.org/licenses/MIT.html.
+ *
+ * SPDX-License-Identifier: EPL-2.0 OR MIT
+ */
 :root {
     --text-flowing-font: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
     --text-font-family: Arial, Helvetica, sans-serif;
