--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -48,6 +48,13 @@ footer {
     display: flex;
     flex-direction: row;
     }
+.rightDecoration {
+	width: 4.5em;
+	display: flex;
+	flex-direction: row;
+	z-index: 90;
+	order: 5;
+	}
 @media (max-width: 23.25em) {
     .change_menu_logo {
         visibility: hidden !important;
