#117 Align article images.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -19,6 +19,11 @@ main {
     background-repeat: no-repeat;
     background-image:url('/net/splitcells/martins/avots/website//images/license.standard/white.background.blog.discovery.0.jpg');
 }
+article p img {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	}
 ol {
     padding-left: 1em;
     }
