Limit image size to parent element.

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -20,6 +20,7 @@ main {
     background-image:url('/net/splitcells/martins/avots/website//images/license.standard/white.background.blog.discovery.0.jpg');
 }
 article p img {
+	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
