--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/layout.default.css
@@ -36,10 +36,11 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-}
+    min-height: 2.5em;
+	}
 .menu h3 {
     padding-left: .25em;
-}
+	}
 .net-splitcells-content-main {
     display: flex;
     flex-direction: row;
