--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -209,6 +209,10 @@ main {
     background-color: var(--background-color-priority-0);
 	color: var(--foreground-color-priority-0);
 }
+.net-splitcells-component-priority-2 {
+    background-color: var(--background-color-priority-2);
+	color: var(--foreground-color-priority-2);
+}
 .net-splitcells-content-main,
 .net-splitcells-component-priority-1 {
     background-color: var(--background-color-priority-1);
