--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -63,7 +63,10 @@ ol > ol {
 .Standard_p2 .Standard_highlighted {
     background-color: var(--background-color-priority-1);
     }
-.net-splitcells-content-column .heading {
+.net-splitcells-content-column .heading,
+.net-splitcells-content-column h2,
+.net-splitcells-content-column h3,
+.net-splitcells-content-column h4 {
     background-color: var(--background-color-priority-0);
     color: var(--foreground-color-priority-0);
     }
