--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -324,7 +324,7 @@ td.TextCell {
 	padding: 0.1em;
 	font-weight: bold;
 	}
-h2 {
+article h2 {
     font-size: 125%;
 	font-weight: bold;
 	margin-top: 3em;
@@ -347,9 +347,9 @@ h4 {
     padding-left: .4em;
     }
 .heading,
-h2,
-h3,
-h4 {
+article h2,
+article h3,
+article h4 {
 	font-size: 125%;
 	font-weight: bold;
 	margin-top: 3em;
