#s65 Fix styling of h1 for CommonMark files.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -64,6 +64,7 @@ ol > ol {
     background-color: var(--background-color-priority-1);
     }
 .net-splitcells-content-column .heading,
+.net-splitcells-content-column h1,
 .net-splitcells-content-column h2,
 .net-splitcells-content-column h3,
 .net-splitcells-content-column h4 {
