--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -14,6 +14,8 @@
   In other words grow in one direction and fille the other one.
 - Use names with namespaces.
 */
+/* TODO Split CSS in CSS without classes and CSS with specifics for this website.
+*/
 main {
     background-size: 100%;
     background-repeat: no-repeat;
@@ -359,6 +361,12 @@ article h4 {
     padding-right: 1em;
     padding-bottom: .5em;
     padding-left: 1em;
+	}
+article h2 {
+    margin-left: .8em;
+	}
+article h3 {
+    margin-left: 1.6em;
 	}
 .chapter .heading {
 	margin-left: .2em;
