--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -25,9 +25,11 @@ code {
 	/* Code blocks are created by default CommonMark rendering. */
 	font-family: Palatino, Palatino Linotype, Palatino LT STD, Book Antiqua, Georgia, serif;
 	}
+li code::after,
 p code::after {
 	content: "“";
 	}
+li code::before,
 p code::before {
 	content: "”";
 	}
