#s70 Make margins and paddings consistent.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -40,7 +40,8 @@ article p img {
 	display: block;
 	}
 ol {
-    padding-left: 1em;
+    margin-left: .5em;
+    padding-left: .5em;
     }
 ol > ol {
     padding-left: 2em;
