#138 Fix styling of code blocks.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.themed.css
@@ -17,8 +17,7 @@ html {
 }
 pre {
     background-color: var(--background-color-priority-2);
-    padding-left: 1em;
-    padding-right: 1em;
+    padding: 1em;
     }
 ol {
     list-style-type: none;
