--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/basic.css
@@ -580,6 +580,13 @@ p {
 	padding-left: 1em;
 	padding-right: 1em;
 	}
+ol p {
+	font-family: Palatino,Palatino Linotype,Palatino LT STD,Book Antiqua,Georgia,serif;
+	margin-top: 0em;
+	margin-bottom: 0em;
+	padding-left: 1em;
+	padding-right: 1em;
+	}
 .paragraph {
     /** TODO This class is deprecated. */
 	font-family: Palatino,Palatino Linotype,Palatino LT STD,Book Antiqua,Georgia,serif;
