--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
@@ -40,7 +40,7 @@ li.net-splitcells-den-perspective {
 li {
     border-left: 1px solid rgb(100,100,100);
    padding-left: .5em;
-   margin-left: .5em;
+   margin-left: 1.5em;
    }
 .void {
     display: none;
