Improve list item visibility on website.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
@@ -42,6 +42,12 @@ li {
    padding-left: .5em;
    margin-left: 1.5em;
    }
+li:nth-child(even) {
+    background: var(--paragraph-background-color-priority-1-b);
+    }
+li:nth-child(odd) {
+    background: var(--paragraph-background-color-priority-1-a);
+    }
 .void {
     display: none;
     }
