--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
@@ -38,9 +38,11 @@ li.net-splitcells-den-perspective {
    list-style-type: none;
    }
 li {
-    border-left: 1px solid rgb(100,100,100);
+   border-left: 1px solid rgb(100,100,100);
    padding-left: .5em;
    margin-left: 1.5em;
+   box-shadow: 0em 0.1em 0.1em -0.1em var(--shadow-color-priority-3);
+   margin: .1em;
    }
 li:nth-child(even) {
     background: var(--paragraph-background-color-priority-1-b);
