--- a/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
+++ b/projects/net.splitcells.website.default.content/src/main/resources/html/net/splitcells/website/css/den.css
@@ -44,6 +44,10 @@ li {
    box-shadow: 0em 0.1em 0.1em -0.1em var(--shadow-color-priority-3);
    margin: .1em;
    }
+li:hover {
+    background-color: var(--background-color-selected-priority-0) !important;
+    color: var(--foreground-color-selected-priority-0) !important;
+    }
 li:nth-child(even) {
     background: var(--paragraph-background-color-priority-1-b);
     }
